--- a/fcm.html
+++ b/fcm.html
@@ -8,5 +8,6 @@
   <body>
     <script src="fcm.js"></script>
     <script src="gui.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
